Change github source to codecommit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"],
+    "outDir": "ts-out/"
   },
-  "exclude": ["cdk.out"]
+  "exclude": [
+    "cdk.out",
+    "ts-out/**/*"
+  ]
 }
