--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@aws-cdk/aws-codepipeline": "^1.94.1",
     "@aws-cdk/aws-codepipeline-actions": "^1.94.1",
     "@aws-cdk/aws-lambda": "^1.94.1",
-    "@aws-cdk/aws-ssm": "^1.94.1",
     "@aws-cdk/core": "1.94.1",
     "@aws-cdk/pipelines": "^1.94.1",
+    "@aws-cdk/aws-lambda-event-sources": "^1.94.1",
     "@types/aws-lambda": "^8.10.72",
     "source-map-support": "^0.5.16"
   }
